...

const Duration _mockNetworkDelay = Duration(milliseconds: 400);

// Programs mock ---------------------------------------------------------

final List<String> mockPrograms = <String>[
  'Beginner Full Body (Week 3)',
  'Push/Pull/Legs Split',
  '5K Training Plan',
  'Upper/Lower Strength',
];

String mockCurrentProgramName = mockPrograms.first;
...
